--- a/layout.html
+++ b/layout.html
@@ -7,7 +7,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Hangman</title>
+	<title>Rutgers Bootcamp - Hangman</title>
 
 	<!-- Bootstrap is used to make game look nicer -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -20,8 +20,8 @@
 		<!-- Jumbotron holds the title section -->
 		<div class="jumbotron">
 			<div class="container">
-				<h1>Hangman</h1>
-				<h2>Guess words to win!</h2> 
+				<h1>Rutgers Bootcamp - Hangman</h1>
+				<h2>Guess the name of students from class!</h2> 
 				<small>Click any letter to begin...</small>
 			</div>
 		</div>
